--- a/ASFEnhance/Localization/Localization.resx
+++ b/ASFEnhance/Localization/Localization.resx
@@ -117,4 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="PluginVer" xml:space="preserve">
+    <value>ASFEnhance {0}.{1}.{2} Build {3}</value>
+  </data>
 </root>
