--- a/ASFEnhance/Localization/Langs.zh-TW.resx
+++ b/ASFEnhance/Localization/Langs.zh-TW.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="test" xml:space="preserve">
+    <value>中文2</value>
+  </data>
   <data name="PluginVer" xml:space="preserve">
-    <value>ASFEnhance {0}.{1}.{2} Build {3}</value>
+    <value>ASFEnhance {0}.{1}.{2} 编译 {3}</value>
   </data>
 </root>
