新增 EVENT EVENTCHECK 命令, 秋促批量投票 使用方法参见 README.md 更新版本 1.5.7.194 -> 1.5.8.208

--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -267,4 +267,13 @@
   <data name="WalletAreaUnknown" xml:space="preserve">
     <value>Unknown wallet area</value>
   </data>
+  <data name="EventReadBadgeStatusFailed" xml:space="preserve">
+    <value>Read badge status failed</value>
+  </data>
+  <data name="EventCheckResponse" xml:space="preserve">
+    <value>Nominate at least 1 game: {0}  Nominate a game in each category: {1}  Play a game you nominated: {2}  Review or update your review of a game you nominated: {3}</value>
+  </data>
+  <data name="EventVoteResponse" xml:space="preserve">
+    <value>Nominate at least 1 game: {0}  Nominate a game in each category: {1}</value>
+  </data>
 </root>
