--- a/ASFEnhance/Localization/Langs.zh-CN.resx
+++ b/ASFEnhance/Localization/Langs.zh-CN.resx
@@ -276,4 +276,10 @@
   <data name="EventCheckResponse" xml:space="preserve">
     <value>提名至少一款游戏: {0}  为各奖项提名一款游戏:{1}  玩一款您提名的游戏: {2}  为一款您提名的游戏新发表或更新评测: {3}</value>
   </data>
+  <data name="RecommendPublishFailed" xml:space="preserve">
+    <value>评测发布失败: {0}</value>
+  </data>
+  <data name="RecommendPublishSuccess" xml:space="preserve">
+    <value>评测发布成功</value>
+  </data>
 </root>
