增加 `JOINGROUP` 命令更新文档

--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -282,4 +282,7 @@
   <data name="RecommendPublishSuccess" xml:space="preserve">
     <value>Recommend publish successfull</value>
   </data>
+  <data name="JoinGroup" xml:space="preserve">
+    <value>Join the Group: {0}</value>
+  </data>
 </root>
