新增 `GROUPLIST` 命令（BUG）

--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -285,4 +285,7 @@
   <data name="JoinGroup" xml:space="preserve">
     <value>Join the Group: {0}</value>
   </data>
+  <data name="GroupListEmpty" xml:space="preserve">
+    <value>pty</value>
+  </data>
 </root>
