新增`APIKEY`和`ACCESSTOKEN`命令 修改`COOKIES`命令为可选特性 需要在ASF.json中设置`ASFEnhanceDevFuture=true`才会启用

--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -301,6 +301,12 @@
     <value>No</value>
   </data>
   <data name="PurchaseFailed" xml:space="preserve">
-    <value>Purchase failed, wallet balence don't change.</value>
+    <value>Purchase failed, wallet balence don't change</value>
+  </data>
+  <data name="FetchDataFailed" xml:space="preserve">
+    <value>Fetch {0} failed</value>
+  </data>
+  <data name="DataIsNull" xml:space="preserve">
+    <value>{0} is NULL</value>
   </data>
 </root>
