--- a/ASFEnhance/Localization/Langs.resx
+++ b/ASFEnhance/Localization/Langs.resx
@@ -309,4 +309,7 @@
   <data name="DataIsNull" xml:space="preserve">
     <value>{0} 是NULL</value>
   </data>
+  <data name="DevFeatureEnabledWarning" xml:space="preserve">
+    <value>开发者特性已开启</value>
+  </data>
 </root>
