迁移到 ASF 5.2.2.5, 插件API修改, 无法兼容旧版ASF 代码格式调整

--- a/ASFEnhance/Localization/Langs.en-US.resx
+++ b/ASFEnhance/Localization/Langs.en-US.resx
@@ -190,7 +190,7 @@
     <value>Developed by Chr_, email chr@chrxw.com</value>
   </data>
   <data name="PluginVer" xml:space="preserve">
-    <value>ASFEnhance {0}.{1}.{2} build {3}</value>
+    <value>{0} Version {1}.{2}.{3}.{4}</value>
   </data>
   <data name="ProfileBadges" xml:space="preserve">
     <value>Badges: {0}</value>
