--- a/ASFEnhance/Localization/Langs.zh-CN.resx
+++ b/ASFEnhance/Localization/Langs.zh-CN.resx
@@ -411,4 +411,13 @@
   <data name="AppReleasedDateEx" xml:space="preserve">
     <value> [{0}]</value>
   </data>
+  <data name="SearchResultEmpty" xml:space="preserve">
+    <value>该查询未传回任何结果</value>
+  </data>
+  <data name="MultipleLineResult" xml:space="preserve">
+    <value>多行结果:</value>
+  </data>
+  <data name="SearchResultTitle" xml:space="preserve">
+    <value>AppID | 名称</value>
+  </data>
 </root>
